--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/words_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:background="?attr/appWidgetBackgroundColor"
         android:contentDescription="@string/appwidget_text"
