--- a/app/src/main/res/layout/widget_configure.xml
+++ b/app/src/main/res/layout/widget_configure.xml
@@ -31,7 +31,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update period" />
+        android:text="@string/update_period" />
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -82,6 +82,26 @@
             android:text="@string/RadioBtnBlack" />
 
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/textViewFontStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fontStyleTypelbl" />
+
+    <CheckBox
+        android:id="@+id/checkBoxBold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="checkBoxFontStyleBoldListener"
+        android:text="@string/fontStyleBold" />
+
+    <CheckBox
+        android:id="@+id/checkBoxItalic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="checkBoxFontStyleItalicListener"
+        android:text="@string/fontStyleItalic" />
 
     <Button
         android:id="@+id/add_button"
